foolish/foolish-core/src/snapshots/foolish_core__approval_tests__mixed_operators.snap
---
source: foolish-core/src/lib.rs
expression: output
---
SIG: dc5f586cda43023e707697692c78032300a24b1b813cbf1ccb770080d1a7b683 RktYRkPvZIHDTtXdGk8m5DsojJoBm6bSYIQjVxOwAoLphHCBoTqnRZwhhdMIiHIYmYsoyVeIhPiF6w5ziAjQCA==
INPUT: {10 + 5 - 3 * 2;}
[0] PARSED:
Brane [EMBRYONIC]
  Operator(-) [EMBRYONIC]
    Operator(+) [EMBRYONIC]
      Int(10) [INDEPENDENT]
      Int(5) [INDEPENDENT]
    Operator(*) [EMBRYONIC]
      Int(3) [INDEPENDENT]
      Int(2) [INDEPENDENT]
RESULT:
Brane [CONSTANT]
  Int(9) [CONSTANT]
