foolish/foolish-core/src/snapshots/foolish_core__approval_tests__multipleExpressionsIsApproved.snap
---
source: foolish-core/src/lib.rs
expression: output
---
INPUT: {
[0] PARSED:
Brane [EMBRYONIC]
  Int(1) [INDEPENDENT]
  Int(2) [INDEPENDENT]
  Int(3) [INDEPENDENT]
RESULT:
Brane [CONSTANT]
  Int(1) [INDEPENDENT]
  Int(2) [INDEPENDENT]
  Int(3) [INDEPENDENT]
