foolish/foolish-core/src/snapshots/foolish_core__approval_tests__multipleIdentifiersIsApproved.snap
---
source: foolish-core/src/lib.rs
expression: output
---
SIG: dc5f586cda43023e707697692c78032300a24b1b813cbf1ccb770080d1a7b683 ZFJ3BUeQnNGFmrTNGZC3F8teEVp5fPsMmMaMaCz+sRN2D+JvzUytSErOuGx6rOEmLVl3oMT2PE2x2eWphjlSBQ==
INPUT: {
[0] PARSED:
Brane [EMBRYONIC]
  x = 
  Int(5) [INDEPENDENT]
  y = 
  Int(3) [INDEPENDENT]
  z = 
  Int(2) [INDEPENDENT]
  Operator(+) [EMBRYONIC]
    Operator(*) [EMBRYONIC]
      Search(pattern='^x$', dir=BACKWARD, FREE) [EMBRYONIC]
      Search(pattern='^y$', dir=BACKWARD, FREE) [EMBRYONIC]
    Search(pattern='^z$', dir=BACKWARD, FREE) [EMBRYONIC]
RESULT:
Brane [CONSTANT]
  x = 
  Int(5) [INDEPENDENT]
  y = 
  Int(3) [INDEPENDENT]
  z = 
  Int(2) [INDEPENDENT]
  Int(17) [CONSTANT]
