foolish/foolish-core/src/snapshots/foolish_core__approval_tests__multiple_arithmetic_expressions.snap
---
source: foolish-core/src/lib.rs
expression: output
---
INPUT: {5 + 3; 10 - 4; 2 * 6;}
[0] PARSED:
Brane [EMBRYONIC]
  Operator(+) [EMBRYONIC]
    Int(5) [INDEPENDENT]
    Int(3) [INDEPENDENT]
  Operator(-) [EMBRYONIC]
    Int(10) [INDEPENDENT]
    Int(4) [INDEPENDENT]
  Operator(*) [EMBRYONIC]
    Int(2) [INDEPENDENT]
    Int(6) [INDEPENDENT]
RESULT:
Brane [CONSTANT]
  Int(8) [CONSTANT]
  Int(6) [CONSTANT]
  Int(12) [CONSTANT]
