foolish/foolish-core/src/snapshots/foolish_core__approval_tests__multiple_concatenation_in_sequence.snap
---
source: foolish-core/src/lib.rs
expression: output
---
INPUT: {a={1;2}; b={3;4}; c={5;6}; r1 = a b; r2 = b c; r3 = a c;}
[0] PARSED:
Brane [EMBRYONIC]
  a = 
  Brane [EMBRYONIC]
    Int(1) [INDEPENDENT]
    Int(2) [INDEPENDENT]
  b = 
  Brane [EMBRYONIC]
    Int(3) [INDEPENDENT]
    Int(4) [INDEPENDENT]
  c = 
  Brane [EMBRYONIC]
    Int(5) [INDEPENDENT]
    Int(6) [INDEPENDENT]
  r1 = 
  Concatenation(elements=2) [EMBRYONIC]
    Search(pattern='^a$', dir=BACKWARD, FREE) [EMBRYONIC]
    Search(pattern='^b$', dir=BACKWARD, FREE) [EMBRYONIC]
  r2 = 
  Concatenation(elements=2) [EMBRYONIC]
    Search(pattern='^b$', dir=BACKWARD, FREE) [EMBRYONIC]
    Search(pattern='^c$', dir=BACKWARD, FREE) [EMBRYONIC]
  r3 = 
  Concatenation(elements=2) [EMBRYONIC]
    Search(pattern='^a$', dir=BACKWARD, FREE) [EMBRYONIC]
    Search(pattern='^c$', dir=BACKWARD, FREE) [EMBRYONIC]
RESULT:
Brane [CONSTANT]
  a = 
  Brane [CONSTANT]
    Int(1) [INDEPENDENT]
    Int(2) [INDEPENDENT]
  b = 
  Brane [CONSTANT]
    Int(3) [INDEPENDENT]
    Int(4) [INDEPENDENT]
  c = 
  Brane [CONSTANT]
    Int(5) [INDEPENDENT]
    Int(6) [INDEPENDENT]
  r1 = 
  Brane [CONSTANT]
    Int(1) [INDEPENDENT]
    Int(2) [INDEPENDENT]
    Int(3) [INDEPENDENT]
    Int(4) [INDEPENDENT]
  r2 = 
  Brane [CONSTANT]
    Int(3) [INDEPENDENT]
    Int(4) [INDEPENDENT]
    Int(5) [INDEPENDENT]
    Int(6) [INDEPENDENT]
  r3 = 
  Brane [CONSTANT]
    Int(1) [INDEPENDENT]
    Int(2) [INDEPENDENT]
    Int(5) [INDEPENDENT]
    Int(6) [INDEPENDENT]
