foolish/foolish-core/src/snapshots/foolish_core__approval_tests__named_brane_basic.snap
---
source: foolish-core/src/lib.rs
expression: output
---
INPUT: {x = 10; myname'{val = x};}
[0] PARSED:
Brane [EMBRYONIC]
  x = 
  Int(10) [INDEPENDENT]
  myname'Brane [EMBRYONIC]
    val = 
    Search(pattern='^x$', dir=BACKWARD, FREE) [EMBRYONIC]
RESULT:
Brane [CONSTANT]
  x = 
  Int(10) [INDEPENDENT]
  myname'Brane [CONSTANT]
    val = 
    Int(10) [INDEPENDENT]
